Changing notepad background on mobile, fixing bug that allowed users to delete other users tasks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -394,7 +394,13 @@ footer{
       position: relative;
     }
   }
+
+  #user_notes{
+    background-color: rgba(255,255,255,0.9) !important;
+    color: #000000 !important;
+  }
 }
+
 
 /*iPhone Portrait below iPhone 6*/
 @media screen and (max-width: 375px){
